--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "helmet": "^7.0.0"
+    "helmet": "^7.0.0",
+    "mongoose": "^7.4.1"
   },
   "devDependencies": {
     "@babel/cli": "^7.22.9",
