--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "Grayson Cunha",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-sqs": "^3.379.1",
+    "aws-sdk": "^2.1425.0",
     "body-parser": "^1.20.2",
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
