--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@aws-sdk/client-sqs": "^3.379.1",
     "aws-sdk": "^2.1425.0",
     "body-parser": "^1.20.2",
+    "compression": "^1.7.4",
     "cross-env": "^7.0.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
-    "mongoose": "^7.4.1"
+    "mongoose": "^7.4.1",
+    "sqs-consumer": "^7.2.2"
   },
   "devDependencies": {
     "@babel/cli": "^7.22.9",
