--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "<h1>Backend Analyst Candidate Test</h1> Dear developer,",
   "main": "index.js",
   "scripts": {
+    "start": "node dist/src/server.js",
     "start:dev": "nodemon --exec babel-node src/server.js",
     "build": "./node_modules/.bin/babel src --out-dir dist",
     "test": "jest"
