--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "node dist/src/server.js",
     "start:dev": "nodemon --exec babel-node src/server.js",
+    "start:gendoc": "node swagger.js",
     "build": "./node_modules/.bin/babel src --out-dir dist",
     "test": "jest"
   },
@@ -24,7 +25,8 @@
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "mongoose": "^7.4.1",
-    "sqs-consumer": "^7.2.2"
+    "sqs-consumer": "^7.2.2",
+    "swagger-ui-express": "^5.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.22.9",
@@ -41,6 +43,7 @@
     "nodemon": "^3.0.1",
     "prettier": "3.0.0",
     "supertest": "^6.3.3",
+    "swagger-autogen": "^2.23.5",
     "typescript": "^5.1.6"
   }
 }
